-fix: adjust alert container title collapse -fix: add inline height to smaht logo img to prevent large img load -style: adjust footer width to prevent text wrap, add container -style: add background color to footer parent -style: center timeline with card header -> bottom of human figure -style: add spacing between card list items

--- a/src/encoded/static/scss/encoded/_layout.scss
+++ b/src/encoded/static/scss/encoded/_layout.scss
@@ -277,13 +277,13 @@ body.is-full-screen {
 ********************************************************** */
 
 #page-footer {
+	background-color: #F5F9FB;
+	border-top: 1px solid #EDF3F6;
 
 	> .page-footer {
-		background-color: $footer-background-color;
-		border-top: 1px solid #EDF3F6;
 		text-align: center;
 		overflow: hidden;
-		height: 60px;
+		height: auto;
 
 		a {
 			font-size: 14px;
