--- a/src/encoded/static/scss/encoded/modules/_static-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_static-pages.scss
@@ -506,7 +506,6 @@ body[data-path="/"]>#application>#layout {
 			> .alert {
 				background-color: #FEE5E5;
 				position: relative;
-				display: flex;
 				padding: 17px 60px 17px 25px;
 
 				.alert-heading {
