--- a/src/encoded/static/scss/encoded/modules/_viz.scss
+++ b/src/encoded/static/scss/encoded/modules/_viz.scss
@@ -317,6 +317,7 @@ Note: Colors for borders and backgrounds are defined in _tokens.scss.
     @media screen and (min-width: 767px) {
     }
     @media screen and (min-width: 992px) {
+        padding-top: 55px;
         .timeline-item {
             &-header {
                 h3 {
@@ -409,7 +410,7 @@ Note: Colors for borders and backgrounds are defined in _tokens.scss.
         .card {
             margin: auto;
             width: 100%;
-            margin-bottom: 20px;
+            margin-bottom: 40px;
             background-color: transparent;
             border: none;
             box-shadow: none;
@@ -420,6 +421,7 @@ Note: Colors for borders and backgrounds are defined in _tokens.scss.
                 height: 25px;
                 background-color: transparent;
                 border: none;
+                margin-bottom: 10px;
                 
                 h4 {
                     margin: auto;
@@ -442,14 +444,16 @@ Note: Colors for borders and backgrounds are defined in _tokens.scss.
                 @include prefix(box-shadow, 0px 0px 12px hsla(209, 72, 78, .50));
 
                 .card-list {
-                    // margin: auto auto auto 40px;
+                    margin-bottom: 10px;
+                    margin-right: 20px;
+
                     h5 {
                         font-size: 12px;
                         line-height: 15px;
                         font-weight: 600;
                         letter-spacing: normal;
                         color: #7490F2;
-                        margin: 0px auto 5px auto;
+                        margin: 0px auto 10px auto;
                         animation: fade-in 150ms;
                     }
                     ul {
@@ -495,9 +499,6 @@ Note: Colors for borders and backgrounds are defined in _tokens.scss.
                             margin-left: 2px;
                             margin-right: 6px;
                         }
-                        span {
-                            color: #0E3669;
-                        }
                     }
 
                     @keyframes fade-in {
@@ -530,7 +531,6 @@ Note: Colors for borders and backgrounds are defined in _tokens.scss.
                 &.benchmarking {
                     ul {
                         li {
-                            font-size: 12px;
                             div {
                                 padding-right: 0px;
                             }
@@ -636,9 +636,6 @@ Note: Colors for borders and backgrounds are defined in _tokens.scss.
 
         &-content {
             .card {
-                &-header {
-                    margin: 0px;
-                }
                 &-body {
                     width: 350px;
                 }
@@ -655,6 +652,11 @@ Note: Colors for borders and backgrounds are defined in _tokens.scss.
             .card {
                 width: fit-content;
                 margin: 0px;
+                margin-bottom: 0px;
+
+                &-header {
+                    margin-bottom: 0px;
+                }
 
                 &-body {
                     width: 230px;
@@ -728,6 +730,7 @@ Note: Colors for borders and backgrounds are defined in _tokens.scss.
             padding: 0px;
             .card {
                 width: auto;
+                
                 &-body {
                     width: 231px;
                     height: 621px;
